# ex_comrak

./: .gitignore  README.md  mix.exs
.github/workflows/: hex-publish.yml  release.yml
lib/: ex_comrak.ex
lib/ex_comrak/: native.ex
native/comrak_nif/: Cargo.toml
native/comrak_nif/.cargo/: config.toml
native/comrak_nif/src/: lib.rs
test/: ex_comrak_test.exs
